I am add the new cell number in this file of vijay html file

--- a/vijay.html
+++ b/vijay.html
@@ -11,3 +11,7 @@
 
   In February 2024, Vijay announced his retirement from films and his entry into politics with the launch of his political outfit, known as Tamilaga Vettri Kazhagam.
 </p>
+
+<p>
+  <b>cell:98845365678</b>
+</p>
