Adding the table

--- a/vijay.html
+++ b/vijay.html
@@ -19,3 +19,17 @@
 <p>
   <b>Email: abc@gmail.com</b>
 </p>
+<div class="form">
+
+  <table>
+    <tr>
+      <td>
+        Name
+      </td>
+      <td>
+        City
+      </td>
+    </tr>
+  </table>
+
+</div>
